2009-01-11  James Liggett  <jrliggett@cox.net>

	* plugins/subversion/anjuta-subversion.glade:
	* plugins/subversion/svn-command.c (ssl_server_trust_prompt):
	Fix Bug 567217 – Don't use trailing spaces.

2009-01-11  James Liggett  <jrliggett@cox.net>

	* plugins/profiler/profiler.glade:
	Fix Bug 567228 – Don't leave trailing spaces.

2009-01-11  James Liggett  <jrliggett@cox.net>

	* plugins/subversion/subversion-vcs-interface.c
	(subversion_ivcs_checkout), (on_ivcs_status_command_data_arrived),
	(subversion_ivcs_query_status):
	* plugins/subversion/subversion-vcs-interface.h:
	Implement the checkout method for IAnjutaVcs in the Subversion plugin.
	
	IAnjutaVcs is now completely implemented for the Subversion plugin.

2009-01-11  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	reviewed by: James Liggett <jrliggett@cox.net>

	* plugins/subversion/Makefile.am:
	* plugins/subversion/svn-checkout-command.c
	(svn_checkout_command_init), (svn_checkout_command_finalize),
	(svn_checkout_command_run), (svn_checkout_command_class_init),
	(svn_checkout_command_new), (svn_checkout_command_destroy):
	* plugins/subversion/svn-checkout-command.h:
	Add a checkout command to the Subversion plugin.
	
	Partially fixes bug 531765.

2009-01-12  Massimo Cora'  <mcora@svn.gnome.org>

	* plugins/symbol-db/plugin.c
	(on_editor_buffer_symbols_update_timeout),
	(do_check_languages_count), (on_project_root_added),
	(on_scan_end_manager):
	* plugins/symbol-db/symbol-db-engine-core.c (sdb_engine_init),
	(symbol_db_engine_remove_file):
	* plugins/symbol-db/symbol-db-engine-priv.h:
	* plugins/symbol-db/symbol-db-engine-queries.c
	(symbol_db_engine_get_languages_count),
	(symbol_db_engine_is_language_used):
	* plugins/symbol-db/symbol-db-engine-queries.h:
	fixed #548910. 
	Hide the Global tab in case only C-files are used in a project.
	Enable it instead with 2+ different languages.

2008-01-11  Sébastien Granjoux  <seb.sfo@free.fr>

	* plugins/project-wizard/druid.c,